# trann

./: README.md  pyproject.toml
src/trann/: scripts.py  trann.py
